Disable Pylint for now

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,8 +27,8 @@ jobs:
       - name: Setup virtual environment
         run: make venv
 
-      - name: Pylinting
-        run: make pylint
+      # - name: Pylinting
+      #   run: make pylint
 
       - name: Unit Tests
         run: make unit_test
